# rust-backend-boilerplate

./: Cargo.toml
.sqlx/: query-306ae54aad313ab34397af660f46668b942f6c9d8d9a4238b6ec3336c85aced7.json  query-84813bc1d774049ec554498a8e67dcaa8bf94d2ff5d62c39fb08bef70efafa70.json  query-cd48c610f592df1b28461b5571de33186d121246a05548c0b1de744a8d337567.json  query-d533375a67264d503c4f72c6608909dcd20000520e642d6823cb8fb0687f4515.json
migrations/: 20240504051548_create_users_table.up.sql
src/: ctx.rs  main.rs
src/middleware/: auth_middleware.rs
src/models/: user.rs
src/repositories/: error.rs  mod.rs  user_repository.rs
src/routes/: auth_route.rs  error.rs  mod.rs  user_route.rs
